# com.redhat.resolver

./: .gitignore  AUTHORS  Makefile  Makefile.am  README.md  autogen.sh  com.redhat.resolver.spec  configure.ac  meson.build  org.varlink.resolver.spec
src/: com.redhat.resolver.varlink  main.c  meson.build  org.varlink.activator.varlink  org.varlink.resolver.varlink  service.c  service.h  util.h
